--- a/modules/fontrendering/CMakeLists.txt
+++ b/modules/fontrendering/CMakeLists.txt
@@ -1,8 +1,6 @@
-#--------------------------------------------------------------------
 # Inviwo FontRendering Module
 ivw_module(FontRendering)
 
-# Add header files
 set(HEADER_FILES
     include/modules/fontrendering/datastructures/fontdata.h
     include/modules/fontrendering/datastructures/fontsettings.h
@@ -18,7 +16,6 @@ set(HEADER_FILES
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
-# Add source files
 set(SOURCE_FILES
     src/datastructures/fontdata.cpp
     src/datastructures/fontsettings.cpp
@@ -54,17 +51,16 @@ ivw_add_to_module_pack(${CMAKE_CURRENT_SOURCE_DIR}/fonts)
 option(IVW_USE_EXTERNAL_FREETYPE "Freetype is provided externaly" OFF)
 if(NOT IVW_USE_EXTERNAL_FREETYPE)
     add_subdirectory(ext/freetype)
-    set(copyright "${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/freetype/docs/FTL.TXT")
+    ivw_register_license_file(NAME FreeType MODULE FontRendering TARGET freetype
+        URL "https://www.freetype.org/"
+        TYPE "BSD-style, acknowledgement: Portions of this software are copyright The FreeType Project (www.freetype.org). All rights reserved."
+        FILES ${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/freetype/docs/FTL.TXT
+    )
+     ivw_default_install_targets(freetype)
 else()
     find_package(freetype REQUIRED)
-    ivw_vcpkg_install(freetype COPYRIGHT copyright)
+    ivw_vcpkg_install(freetype MODULE FontRendering)
 endif()
-
-ivw_register_license_file(NAME FreeType MODULE FontRendering
-    URL "https://www.freetype.org/"
-    TYPE "BSD-style, acknowledgement: Portions of this software are copyright The FreeType Project (www.freetype.org). All rights reserved."
-    FILES ${copyright}
-)
 
 find_package(utfcpp REQUIRED)
 target_link_libraries(inviwo-module-fontrendering 
