--- a/modules/base/tests/benchmarks/CMakeLists.txt
+++ b/modules/base/tests/benchmarks/CMakeLists.txt
@@ -1,20 +1,18 @@
-    project(BaseBenchmarks)
-    #--------------------------------------------------------------------
-    # Add source files
-    set(SOURCE_FILES 
-        ${CMAKE_CURRENT_SOURCE_DIR}/benchmain.cpp 
-    )
-    ivw_group("Source Files" ${SOURCE_FILES})
+project(BaseBenchmarks)
 
-    set(target "base-benchmark")
-    #--------------------------------------------------------------------
-    # Create application
-    add_executable(${target} MACOSX_BUNDLE WIN32 ${SOURCE_FILES})
-    target_link_libraries(${target} PUBLIC benchmark)
-    target_link_libraries(${target} PUBLIC inviwo::module::base)
-    set_target_properties(${target} PROPERTIES FOLDER benchmarks)
+set(SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/benchmain.cpp)
+ivw_group("Source Files" ${SOURCE_FILES})
 
-    #--------------------------------------------------------------------
-    # Define defintions and properties
-    ivw_define_standard_definitions(${target} ${target})
-    ivw_define_standard_properties(${target})
+# Create application
+add_executable(base-benchmark MACOSX_BUNDLE WIN32 ${SOURCE_FILES})
+find_package(benchmark CONFIG REQUIRED)
+target_link_libraries(base-benchmark 
+    PUBLIC 
+        benchmark::benchmark
+        inviwo::module::base
+)
+set_target_properties(base-benchmark PROPERTIES FOLDER benchmarks)
+
+# Define defintions and properties
+ivw_define_standard_properties(base-benchmark)
+ivw_define_standard_definitions(base-benchmark base-benchmark)
