--- a/modules/cimg/CMakeLists.txt
+++ b/modules/cimg/CMakeLists.txt
@@ -1,11 +1,6 @@
-# Add OpenEXR
-add_subdirectory(ext/cimg)
-#--------------------------------------------------------------------
 # CImg Module
 ivw_module(CImg)
 
-#--------------------------------------------------------------------
-# Add header files
 set(HEADER_FILES
     include/modules/cimg/cimglayerreader.h
     include/modules/cimg/cimglayerwriter.h
@@ -18,8 +13,6 @@ set(HEADER_FILES
     include/modules/cimg/tiffstackvolumereader.h
 )
 
-#--------------------------------------------------------------------
-# Add source files
 set(SOURCE_FILES
     src/cimglayerreader.cpp
     src/cimglayerwriter.cpp
@@ -31,7 +24,6 @@ set(SOURCE_FILES
     src/tiffstackvolumereader.cpp
 )
 
-#--------------------------------------------------------------------
 # Unit tests
 set(TEST_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/tests/unittests/cimg-unittest-main.cpp
@@ -39,7 +31,6 @@ set(TEST_FILES
 )
 ivw_add_unittest(${TEST_FILES})
 
-#--------------------------------------------------------------------
 # Create module
 ivw_create_module(${SOURCE_FILES} ${HEADER_FILES})
 
@@ -47,9 +38,21 @@ find_package(ZLIB REQUIRED)
 find_package(JPEG REQUIRED)
 find_package(TIFF REQUIRED)
 
+option(IVW_USE_EXTERNAL_CIMG  "Cimg is provided externaly" OFF)
+if(NOT IVW_USE_EXTERNAL_CIMG)
+    add_subdirectory(ext/cimg)
+    ivw_register_license_file(NAME CImg VERSION 2.1.5 MODULE CImg TYPE CeCILL-C
+        URL http://cimg.eu
+        FILES ${CMAKE_CURRENT_SOURCE_DIR}/ext/cimg/Licence_CeCILL-C_V1-en.txt
+    )
+    target_link_libraries(inviwo-module-cimg PRIVATE inviwo::cimg)
+else()
+    find_package(CImg CONFIG REQUIRED)
+    target_link_libraries(inviwo-module-cimg PRIVATE CImg::CImg)
+endif()
+
 target_link_libraries(inviwo-module-cimg 
     PRIVATE
-        inviwo::cimg   
         ZLIB::ZLIB
         JPEG::JPEG
         TIFF::TIFF
@@ -62,27 +65,12 @@ target_compile_definitions(inviwo-module-cimg PRIVATE
     cimg_use_tiff
 )
 
-ivw_register_license_file(NAME CImg VERSION 2.1.5 MODULE CImg TYPE CeCILL-C
-    URL http://cimg.eu
-    FILES ${CMAKE_CURRENT_SOURCE_DIR}/ext/cimg/Licence_CeCILL-C_V1-en.txt
-)
 
-ivw_register_license_file(NAME libjpeg-turbo TARGET JPEG::JPEG MODULE CImg
-    TYPE "BSD-style, acknowledgement: This software is based in part on the work of the Independent JPEG Group"
-    URL www.ijg.org
-    FILES ${IVW_EXTENSIONS_DIR}/libjpeg/README
-)
-
-ivw_register_license_file(NAME tiff TARGET TIFF::TIFF MODULE CImg
-    TYPE "The MIT License"
-    URL http://www.libtiff.org/
-    FILES ${IVW_EXTENSIONS_DIR}/tiff/COPYRIGHT
-)
 
 
 # The current OpenEXR has some problems with regards to packaging. So for now we make it optional.
 # When the packaging is fixed this option should be removed.
-option(IVW_USE_OPENEXR  "Add OpenEXR image format support (HDR images) " ON)
+option(IVW_USE_OPENEXR  "Add OpenEXR image format support (HDR images)" ON)
 option(IVW_USE_EXTERNAL_OPENEXR  "OpenEXR is provided externaly" OFF)
 
 if(IVW_USE_OPENEXR)
@@ -90,12 +78,22 @@ if(IVW_USE_OPENEXR)
         find_package(OpenEXR REQUIRED)
         target_link_libraries(inviwo-module-cimg PRIVATE ${OpenEXR_LIBRARIES})
         target_include_directories(inviwo-module-cimg PRIVATE ${OpenEXR_INCLUDE_DIRS})
+        ivw_vcpkg_install(openexr MODULE cimg)
     else()
         add_subdirectory(ext/openexr)
         ivw_register_license_file(NAME "OpenEXR" TARGET OpenEXR::IlmImf MODULE CImg
             URL "http://www.openexr.com"
             TYPE "Modified BSD License"
             FILES ext/openexr/openexr/LICENSE.md
+        )
+        ivw_default_install_targets(
+            Half
+            Iex
+            IexMath
+            Imath
+            IlmThread
+            IlmImf
+            IlmImfUtil
         )
         target_link_libraries(inviwo-module-cimg
             PRIVATE
