--- a/modules/glfw/CMakeLists.txt
+++ b/modules/glfw/CMakeLists.txt
@@ -1,7 +1,6 @@
 # Inviwo GLFW Module
 ivw_module(GLFW)
 
-# Add header files
 set(HEADER_FILES
     include/modules/glfw/canvasglfw.h
     include/modules/glfw/canvasprocessorwidgetglfw.h
@@ -14,7 +13,6 @@ set(HEADER_FILES
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
-# Add source files
 set(SOURCE_FILES
     src/canvasglfw.cpp
     src/canvasprocessorwidgetglfw.cpp
@@ -32,17 +30,18 @@ ivw_create_module(${SOURCE_FILES} ${HEADER_FILES})
 option(IVW_USE_EXTERNAL_GLFW "GLFW is provided externaly" OFF)
 if(NOT IVW_USE_EXTERNAL_GLFW)
     add_subdirectory(ext/glfw)
-    set(copyright ${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/glfw/LICENSE.md)
+    ivw_register_license_file(NAME "GLFW" VERSION ${GLEW_VERSION} MODULE GLFW
+        URL http://www.glfw.org
+        TYPE "The zlib/libpng License"
+        FILES ${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/glfw/LICENSE.md
+    )
+    ivw_default_install_targets(glfw)
 else()
     find_package(glfw3 REQUIRED)
-    ivw_vcpkg_install(glfw3 COPYRIGHT copyright)    
+    ivw_vcpkg_install(glfw3 MODULE GLFW)    
 endif()
 
 target_link_libraries(inviwo-module-glfw PUBLIC glfw)
 
-ivw_register_license_file(NAME "GLFW" VERSION 3.3.0 MODULE GLFW
-    URL http://www.glfw.org
-    TYPE "The zlib/libpng License"
-    FILES ${copyright}
-)
+
 ivw_make_package(InviwoGLFWModule inviwo-module-glfw)
