--- a/modules/json/CMakeLists.txt
+++ b/modules/json/CMakeLists.txt
@@ -1,9 +1,6 @@
-#--------------------------------------------------------------------
 # Inviwo json Module
 ivw_module(JSON)
 
-#--------------------------------------------------------------------
-# Add header files
 set(HEADER_FILES
     include/modules/json/io/json/boolpropertyjsonconverter.h
     include/modules/json/io/json/buttonpropertyjsonconverter.h
@@ -23,8 +20,6 @@ set(HEADER_FILES
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
-#--------------------------------------------------------------------
-# Add source files
 set(SOURCE_FILES
     src/io/json/boolpropertyjsonconverter.cpp
     src/io/json/buttonpropertyjsonconverter.cpp
@@ -37,37 +32,16 @@ set(SOURCE_FILES
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
-
-#--------------------------------------------------------------------
-# Add shaders
-set(SHADER_FILES$
-    #${CMAKE_CURRENT_SOURCE_DIR}/glsl/jsonprocessor.frag
-)
-ivw_group("Shader Files" ${SHADER_FILES})
-
-
-#--------------------------------------------------------------------
 # Add Unittests
 set(TEST_FILES
 	#${CMAKE_CURRENT_SOURCE_DIR}/tests/unittests/json-test.cpp
 )
 ivw_add_unittest(${TEST_FILES})
 
-#--------------------------------------------------------------------
 # Create module
 ivw_create_module(${SOURCE_FILES} ${HEADER_FILES} ${SHADER_FILES})
+
+find_package(nlohmann_json CONFIG REQUIRED)
 target_link_libraries(inviwo-module-json PUBLIC
     nlohmann_json::nlohmann_json
 )
-
-#--------------------------------------------------------------------
-# Register license for external library
-ivw_register_license_file(NAME "JSON for Modern C++" target nlohmann_json MODULE DataFrame
-URL "https://github.com/nlohmann/json"
-TYPE "The MIT License"
-FILES  ${IVW_EXTENSIONS_DIR}/json/LICENSE.MIT
-)
-
-#--------------------------------------------------------------------
-# Add shader directory to pack
-# ivw_add_to_module_pack(${CMAKE_CURRENT_SOURCE_DIR}/glsl)
