Base: processor for shifting volume data * added CPU processor which shifts voxel data within a volume

--- a/modules/base/CMakeLists.txt
+++ b/modules/base/CMakeLists.txt
@@ -109,6 +109,7 @@ set(HEADER_FILES
     include/modules/base/processors/volumesequencesingletimestepsampler.h
     include/modules/base/processors/volumesequencesource.h
     include/modules/base/processors/volumesequencetospatial4dsampler.h
+    include/modules/base/processors/volumeshifter.h
     include/modules/base/processors/volumeslice.h
     include/modules/base/processors/volumesource.h
     include/modules/base/processors/volumesubsample.h
@@ -227,6 +228,7 @@ set(SOURCE_FILES
     src/processors/volumesequencesingletimestepsampler.cpp
     src/processors/volumesequencesource.cpp
     src/processors/volumesequencetospatial4dsampler.cpp
+    src/processors/volumeshifter.cpp
     src/processors/volumeslice.cpp
     src/processors/volumesource.cpp
     src/processors/volumesubsample.cpp
